--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goga Clicker</title>
+    <title>Goga Cliecker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="menu">
+        <button onclick="selectCharacter('goga')">ГОГА</button>
+        <button onclick="selectCharacter('oleg')">ОЛЕГ</button>
+    </div>
     <div id="game-container">
         <div id="game">
             <h1>Goga Clicker</h1>
