--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="game-container">
         <div id="game">
             <h1>Goga Clicker</h1>
+	        <h2 id="goga-says">"НАЖМИ НА МЕНЯ ДРУЖИЩЕ"</h2>
             <img id="friend-photo" src="images/friend.jpg" alt="Friend Photo" onclick="clickPhoto()">
             <div id="score">Score: 0</div>
             <div id="level">Level: 1</div>
